Bug 291222. Sort display list elements before we lose information about relative ordering by overwriting the topmost bit. r+sr=bzbarsky,a=asa